# SPU

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  LICENSING.md  README.md  a.out  architecture_comparison.md  build.sh  build_20k.sh  build_25k.sh  build_25k_blinky_uart.sh  build_25k_flash_probe.sh  build_25k_sdram_min_probe.sh  build_25k_sdram_min_probe_mask.sh  build_25k_series_stream_probe.sh  build_25k_smoke.sh  build_25k_southbridge_spi_probe.sh  build_25k_spu13_boot_probe.sh  build_25k_spu13_irotc_probe.sh  build_25k_spu13_irotc_spi.sh  build_25k_spu13_lucas_mac_probe.sh  build_25k_spu13_lucas_phslk_probe.sh  build_25k_spu13_math_probe.sh  build_25k_spu13_math_sdram_probe.sh  build_25k_spu13_neuro_guard_probe.sh  build_25k_spu13_neuro_sidecar_probe.sh  build_25k_spu13_rotc_probe.sh  build_25k_spu13_rplu2_arith_probe.sh  build_25k_spu13_rplu2_consume_probe.sh  build_25k_spu13_rplu_math_probe.sh  build_25k_spu13_satellite_aggregator_probe.sh  build_25k_spu13_six_step_probe.sh  build_25k_spu13_som_bmu_probe.sh  build_25k_spu13_som_hydrate_probe.sh  build_25k_spu13_som_probe.sh  build_25k_spu13_som_sidecar.sh  build_25k_spu13_som_southbridge.sh  (+30 more)
.antigravitycli/: 5caa8173-2b9a-4bc4-953d-c9d422db9f03.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  site.yml  smoke.yml
archive/recovered/: industrial_application_guide.md  spu_active_inference.v  spu_fluid_solver.v  spu_proprioception.v  spu_sierpinski_nav.v  spu_soul_metabolism.v  su3_accel_stub.v  su3_taylor_accel.v
docs/: ATTRIBUTION.md  BOOT_SEQUENCE_FSM.md  CARTESIAN_BRIDGE_SPEC.md  COLORLIGHT_I9_SETUP_SUMMARY.md  CURRENT_STATUS.md  DEMO_TOUR.md  DOCS_RTL_CLEANUP_SCOPE_2026-07-16.md  FIRST_HOUR.md  HYDRAULIC_PUMP_SOM_CASE_STUDY.md  ICOSAHEDRAL_QUADRAY_CATALOG.md  INA226_CAPTURE_RUNBOOK.md  INA226_COARSE_MONITOR_CONTRACT.md  IROTC_SPEC.md  LICENSE  LUCAS_MAC_PAPER.md  LUCAS_MAC_PAPER.tex  LUCAS_QUICKSTART.md  MONTGOMERY_BATCH_INVERSION.md  MULTIPLATFORM_SOUTHBRIDGE_STRATEGY.md  MULTIPLIER_SHARING_PLAN.md  PADERBORN_CURRENT_CROSS_VALIDATION.md  PADERBORN_CURRENT_PILOT.md  PHOTONIC_JET_RING_NOTES.md  PUBLICATION_STRATEGY_INDEX.md  QUADRAY_FOR_PROGRAMMERS.md  QUANTUM_ERROR_CORRECTION_APPLICATIONS.md  RATIONAL_AI_FRAMEWORK.md  README.md  ROTC_CANONIZATION_ROADMAP.md  ROTC_EXPONENT_STATE_MACHINE.md  ROTC_KINEMATICS_PAPER.md  ROTC_THIRDS_EXACTNESS_FIX.md  SD_HYDRATION_AUDIT_JUNE28_2026.md  SERIES_STREAM_CONTROLLER.md  SESSION_HANDOVER_2026-07-20.md  SOM1_RESULT_FRAME.md  SOM_CSV_TRAINER.md  SOM_SENSOR_REPLAY.md  SOM_SIDECAR_QUICKSTART.md  SOM_V1_PRODUCT_CONTRACT.md  (+53 more)
docs/blog/: zero_drift_phi_arithmetic.md
hardware/: LICENSE  icesugar_build.sh
hardware/boards/: README.md
hardware/common/: phinary_spec.md
hardware/docs/: PLATFORM_SPEC.md  coupon_quick_reference.md  ecp5_oshwa_carrier_spec.md  ecp5_oshwa_deliverable_audit.md  off_the_shelf_guide.md  parallel_transport_plan.md  pcb_guidelines.md  power_tree.md  rplu_classification.csv  rplu_cubic_audit.csv  rplu_dependency_sweep.csv  rplu_large_regs.csv  rplu_prune_proposal.md  rplu_readmem_files.txt  rplu_runtime.md  rplu_spec.md  rplu_synth_summary.csv  rplu_wire_patch_list.csv  sdio_integration.md  test_coupon_specification.md
hardware/ice40_regular/: icesugar_spu.pcf
hardware/pcb/: spu13_ecp5_carrier.kicad_pcb  spu13_ecp5_carrier.kicad_pro  spu13_ecp5_carrier.kicad_sch  spu13_ecp5_carrier_bom.csv
hardware/rp2040/: CMakeLists.txt  rp2040_flash_pmod.c  rp2040_gpio_loopback.c  rp2040_jtag_idcode_probe.c  rp2040_uart_bridge.c  rp2040_visualiser.c  rp2040_wukong_bridge.c
hardware/rp2350/: CMakeLists.txt  rp2350_j11_loopback_smoke.c  rp2350_lucas_j11_smoke.c  rp2350_rplu2_j11_smoke.c  rp2350_rplu2_pade_j11_smoke.c  rp2350_spu_arithmetic_test.c  rp2350_spu_diag.c  rp2350_spu_interface.c  rp2350_spu_irotc_test.c  rp2350_su3_j11_smoke.c  rp2350_uart_injector.c  rplu_default_tables.h  sd_driver.c  sd_driver.h  tang25k_smoke.c
hardware/rp_common/: diskio.c  rplu_default_tables.h  southbridge_hal.h  spu_boot.c  spu_boot.h  spu_diag.c  spu_diag.h  spu_link.c  spu_link.h  spu_link_test.c  spu_sd.c  spu_sd.h  spu_sd_test.c  spu_storage.c  spu_storage.h
hardware/spu13/: generate_thomson_nodals.py  spu_primes.mem
knowledge/: ._RATIONAL_SHADER.md  ARLINGHAUS_SPATIAL_SYNTHESIS.md  CLOCK_ARCHITECTURE.md  HARDWARE_MANIFEST_SPU13.md  INTERCONNECT_ARCHITECTURE.md  ISA_QUICKSTART.md  LAMINAR_DOOM_HEX_RENDER.md  LAMINAR_UI_MANAGER.md  LITHIC_L_DEEP_DIVE.md  LITHIC_L_LANGUAGE_SPEC.md  LUCAS_PHINARY_MAC.md  MATHEMATICAL_FOUNDATIONS.md  NGUYEN_WEIGHT_PARTITIONING.md  PELL_OCTAVE.md  RATIONAL_CURVES_SPEC.md  RATIONAL_SHADER.md  RATIONAL_SOM_NGUYEN_CLUSTER_NOTES.md  SPU4_ARCHITECTURE.md  SPU_LEXICON.md  STSC_SSAM_MULTI_AGENT_NOTES.md  SYNERGETICS_BEYOND_GEOMETRY.md  THEOREM_LICENSED_TYPESTATE.md  isa_reference.md
software/: LICENSE  cross_validate.py  go.mod  rational_curves_test.py  spu13_arch_sim.py  spu13_arch_sim_test.py  spu4_intrinsics.h  spu_compiler.py  spu_forge.py  spu_inhale.go  spu_vm.py  spu_vm_polystep_ratiocmp_test.py  spu_vm_test.py
software/flash/: flash_map.txt  (+3 more)
tools/: build_docs_site.sh  build_morse_flash.py  build_rplu_trajectory_table.py  build_tang25k_j4_rplu_flash.py  collect_fpga_metrics.py  env_openxc7.fish  env_openxc7.sh  flash_layout.py  gen_kicad_layout.py  gen_paper_figures.py  gen_rplu2_tables.py  gen_som_fixture.py  gen_tensegrity_vectors.py  generate_a7_chipdb.sh  generate_exp_lut.py  generate_gerbers.sh  generate_morse_csv.py  generate_normalized_v_roms.py  generate_oshwa_compliance.py  generate_pade_22_q32.py  generate_pade_44.py  generate_pade_44_q32.py  generate_pade_66_q16.py  generate_pmod_rom.py  generate_r_and_params_hex.py  generate_rational_sine.py  generate_rplu_roms.py  generate_spread_q32.py  generate_spread_surd.py  generate_spread_surd_corr32_v2.py  generate_spread_surd_with_corr.py  generate_spread_surd_with_corr32.py  generate_v_real_and_params.py  generate_vnorm_hw_model.py  hud_v2.py  hud_v2_mpl.py  hydraulic_som_case_study.py  ina226_capture_pipeline.py  iris_som_demo.py  lucas_demo.py  (+32 more)
(+1119 files in other folders)
