[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spu-host"
version = "0.1.0"
description = "Python client for the SPU RP2350/RP2040 southbridge console"
readme = "software/spu_host/README.md"
requires-python = ">=3.10"
license = { file = "software/LICENSE" }
dependencies = [
    "pyserial>=3.5",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
spu-host = "spu_host.__main__:main"

[tool.setuptools]
package-dir = {"" = "software"}
packages = ["spu_host"]
